fix: horizontal scroll on body due to menu animation

--- a/src/index.css
+++ b/src/index.css
@@ -37,4 +37,5 @@ ul {
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
